--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Ray Invest</title>
     <meta
       name="description"
       content="The web's most popular Jamstack React template"
